2018-10-12  Araki Ken  <arakiken@users.sf.net>

	* README, PROTOCOL, README.win32, README.ja, etc/main, etc/main.ja,
	  gtk/README, man/mlterm.1: Updated.

	* ui_screen.c: The restriction of the range of screen->underline_offset
	  is mostly eliminated.

	* ui_layout.c: total_hint_size() sets sizehint_flag of ui_screen_t and
	  ui_scrollbar_t.

	* ui_window.h, */ui_window.c:
	  - ui_sizehint_flag_t is added.
	  - ui_sizehint_flag is added to ui_window_t.
	  - total_min_{width|height}() and total_{width|height}_inc() use sizehint_flag.

	* vt_parser.c:
	  "switch" is available for the value of "col_size_of_width_a" of OSC 5379.

2018-09-23  Araki Ken  <arakiken@users.sf.net>

	* README.android, README.cocoatouch: Updated.

	* ui_screen.c: Minor changes about flick scrolling.

	* ui_font_manager.c: The default value of 'max_font_size' is changed from 40 to 50.

	* android/jni/ui_display.c: long_press_count == 15 (instead of 20) opens menu.

	* android/jni/ui_event_source.c:
	  - ((ui_screen_t*)win)->is_preediting is set in update_ime_text().
	  - need_resize() considers bottom margin correctly.

	* cocoa.m, cocoatouch.m, android/jni/ui_event_source.c, sdl2/ui_display.c:
	  If both preedit_text and cur_preedit_text are non-NULL and same value,
	  update_ime_text() does nothing.

2018-09-17  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: 'test' target is added for bitbucket pipelines.

2018-09-16  Araki Ken  <arakiken@users.sf.net>

	* README.console: Updated.

	* ui_screen.c: The place where enter_backscroll_mode() is called is moved.

2018-09-13  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: Segfault on Android in scrolling by flick is fixed.

2018-09-11  Araki Ken  <arakiken@users.sf.net>

	* cocoa/lipo.sh, mlterm-ios.app/Info.plist: Added.

	* ui_scrollbar.c: sb->current_row is reset in window_resized.

	* ui_screen.[ch]:
	  - grab_scroll is added to ui_screen_t.
	  - bs_scroll_upward() and bs_scroll_downward() are swapped in flick scrolling.
