@@ -1,3 +1,7 @@
+2018-10-13  Araki Ken  <arakiken@users.sf.net>
+
+	* ui_layout.c: The position of calling update_normal_hints() is fixed.
+
 2018-10-12  Araki Ken  <arakiken@users.sf.net>
 
 	* README, PROTOCOL, README.win32, README.ja, etc/main, etc/main.ja,
